# SHOCK

./: .cproject  .gitignore  .gitignore~  .project  README.md  config.ini
TOOLS/: .cproject  .project  cgnsAverage3dInto2d.c  cgnsCopy2d3d.c  cgnsCopy3dCoarseTo3dFine.c  cgnsCopy3dFineTo3dCoarse.c  cgnsCopyGrid1ToGrid2.c  cgnsCopyInterfacesAndCo.c  cgnsCopyMultipleSolutions.c  cgnsCopyOneSolution.c  cgnsCorrectFlowSolutionPointer.c  cgnsDeleteSolutions.c  cgnsExtract.c  cgnsExtractSubZone.c  cgnsMerge.c  extractPressureHistoryFromFilm.c
TOOLS/generatedivfile/: generatedivfile_3.c
TOOLS/mapp/: .config  .gitignore  BlasiusFunc.m  IniConfig.m  LST_NACA.m  LST_NACA_spatial.m  ar_order.m  export.m  find_probe_yplus.m  findqforBlasius.m  frequenzanalyse.fig  frequenzanalyse.m  importData.m  logbar.m  mapp.fig  mapp.ini  mapp.m  namensgebung.odt  process_signal.m  statistics.m  statistics_alt.m  tecplot.phy  testsignal.m
TOOLS/mapp/C-TOOLS/: FUNCTIONS.h  MergePressureHistories.c  MergeVelocityHistories.c  MeshGenerator3d.c  cgnsCoarsen.c  cgnsCopy2dFineTo2dCoarse.c  cgnsCreatePeriodics.c  cgnsExtract.c  cgnsTimeAverage.c  cgnsVisualizationData.c  cgnsWriteSolPointer.c  compile.sh  gci_makeTestfiles.c  generatedivfile_3.c  postGCI.c  postGCIObservedOrder.c  postTKESpanwiseCascade.c  postTKEStreamwiseCascade.c  postTimeAverage.c  postTransientData.c
TOOLS/mapp/LST_Schmid/: Dmat.m  blasius.m  couet.m  deven.m  energy.m  fmy.m  iord2.m  maxer.m  n9.m  nlize.m  optimal.m  osmat.m  pois.m  qbmat.m  two.m
docs/: ZD_Ordnung.xlsx  features.tex  features.tex.bak  formelsammlung.tex  formelsammlung.tex.bak  goveq.tex  goveq.tex.bak  grid_transformation.eps  nummeth.tex  nummeth.tex.bak  poster.tex  poster.tex.bak  scale.eps  scaling.lpk  shock.bbl  shock.ps  shock.tex  shock.tex.bak  stencil_weno5.eps
libs/: .gitignore  HowTo.txt  toolchain.cmake
libs/hdf5/: root_install.sh
src/: BC.c  BC.h  CMakeLists.txt  Export.c  Export.h  Functions.c  Functions.h  Import.c  Import.h  Load.c  Load.h  ManufacturedSolution.c  ManufacturedSolution.h  SHOCK.c  SHOCK.h  Save.c  Save.h  T0_dim  WENO.c  WENO.h  ZD.c  ZD.h  dictionary.c  iniparser.c  iniparser.h  saiwenos.c  saiwenos.h
testcases/: 2d_cube_16x16.cgns  2d_cube_16x16.pw  2d_cube_16x16.sddc  2d_cube_32x32.cgns  2d_cube_32x32.pw  2d_cube_32x32.sddc  2d_cube_64x64.cgns  2d_cube_64x64.pw  2d_cube_64x64.sddc  3d_cube_16x16x16.cgns  3d_cube_16x16x16.pw  3d_cube_16x16x16.sddc  3d_cube_32x32x32.cgns  3d_cube_32x32x32.pw  3d_cube_32x32x32.sddc  3d_cube_64x64x64.cgns  3d_cube_64x64x64.pw  3d_cube_64x64x64.sddc  info.txt
